[gd_scene load_steps=10 format=2]

[ext_resource path="res://player_units/PlayerSoldier.gd" type="Script" id=1]
[ext_resource path="res://weapons/GunHandler.tscn" type="PackedScene" id=2]
[ext_resource path="res://units_assets/Range.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/units/player_soldier.png" type="Texture" id=5]
[ext_resource path="res://units_assets/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://player_units/PlayerShader.tres" type="Material" id=7]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.68055
height = 7.83546

[sub_resource type="CircleShape2D" id=4]
radius = 14.8184

[node name="PlayerSoldier" type="KinematicBody2D" groups=[
"player_units",
]]
collision_layer = 2147483649
collision_mask = 31
script = ExtResource( 1 )
Bullet = ExtResource( 4 )
avoid_weight = 0.8
range_size = 100

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 7 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player_units",
]]
shape = SubResource( 3 )

[node name="AvoidArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AvoidArea"]
visible = false
shape = SubResource( 4 )

[node name="Range" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 2147483650

[node name="GunHandler" parent="." instance=ExtResource( 2 )]

[node name="Health" parent="." instance=ExtResource( 6 )]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
